Full project done
Basic Weather app

--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,33 @@
 .App-link {
   color: #61dafb;
 }
+.main{
+         
+         
+  display: grid;
+  align-items: center;
+  height: 100vh;      
+}
+h1{
+text-align: center;
 
+}h3{text-align: center;}
+.container{
+  margin: auto;
+  align-items: center;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+ width: 300px;
+
+   
+}
+.image{ text-align: center;}
+.temp_and_humidity{
+  display: flex;
+align-items: center;
+justify-content: center;
+gap: 40px;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
