--- a/src/App.css
+++ b/src/App.css
@@ -196,3 +196,12 @@ button{
 
  border-radius: 5px;
 }
+form{
+    display: flex;
+    padding: 5px;
+
+}
+.search-div{
+    display: flex;
+    
+}
